Parser/errors/libm17n.txt
libtool: link: x86_64-alt-linux-gcc -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -o .libs/m17n-dump mdump.o  ../src/.libs/libm17n-core.so ../src/.libs/libm17n.so ../src/.libs/libm17n-flt.so ../src/.libs/libm17n-gui.so
x86_64-alt-linux-gcc -DHAVE_CONFIG_H -I. -I..  -I../src  -DHAVE_X11_XAW_COMMAND_H -DHAVE_FREETYPE -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/libxml2   -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -c -o medit.o medit.c
medit.c: In function 'set_input_method_spot':
medit.c:445:18: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  445 |           size = (int) mface_get_prop (faces[i], Msize);
      |                  ^
medit.c:447:19: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  447 |           ratio = (int) mface_get_prop (faces[i], Mratio);
      |                   ^
medit.c: In function 'select_input_method':
medit.c:665:1: error: type of 'idx' defaults to 'int' [-Wimplicit-int]
  665 | select_input_method (idx)
      | ^~~~~~~~~~~~~~~~~~~
medit.c: In function 'show_cursor':
medit.c:813:22: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  813 |           int size = (int) mfont_get_prop (cursor.font, Msize);
      |                      ^
medit.c: In function 'insert_chars':
medit.c:997:7: warning: variable 'line_from' set but not used [-Wunused-but-set-variable]
  997 |   int line_from;
      |       ^~~~~~~~~
      |                                               ^
medit.c:2996:9: note: in expansion of macro 'SetMenu'
 2996 |         SetMenu (menus[i + 2], 0, name1, name2, InputMethodProc, i, 0);
 2996 |         SetMenu (menus[i + 2], 0, name1, name2, InputMethodProc, i, 0);
      |         ^~~~~~~
      |         ^~~~~~~
medit.c:2468:47: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
medit.c:2468:47: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
medit.c:2468:47: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
 2468 |    (MENU).proc = (PROC), (MENU).client_data = (XtPointer) (DATA),        \
 2468 |    (MENU).proc = (PROC), (MENU).client_data = (XtPointer) (DATA),        \
 2468 |    (MENU).proc = (PROC), (MENU).client_data = (XtPointer) (DATA),        \
      |                                               ^
      |                                               ^
      |                                               ^
      |                                               ^
medit.c:3068:11: note: in expansion of macro 'SetMenu'
medit.c:3068:11: note: in expansion of macro 'SetMenu'
medit.c:3068:11: note: in expansion of macro 'SetMenu'
medit.c:3068:11: note: in expansion of macro 'SetMenu'
 3068 |           SetMenu (menus[j - i], 0, face_table[j].name, NULL,
 3068 |           SetMenu (menus[j - i], 0, face_table[j].name, NULL,
 3068 |           SetMenu (menus[j - i], 0, face_table[j].name, NULL,
 3068 |           SetMenu (menus[j - i], 0, face_table[j].name, NULL,
      |           ^~~~~~~
      |           ^~~~~~~
      |           ^~~~~~~
      |           ^~~~~~~
make[2]: *** [Makefile:703: medit.o] Error 1
make[2]: *** [Makefile:703: medit.o] Error 1
make[2]: *** [Makefile:703: medit.o] Error 1
make[2]: *** [Makefile:703: medit.o] Error 1
make[2]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0/example'
make[2]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0/example'
make[2]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0/example'
make[2]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0/example'
make[1]: *** [Makefile:640: all-recursive] Error 1
make[1]: *** [Makefile:640: all-recursive] Error 1
make[1]: *** [Makefile:640: all-recursive] Error 1
make[1]: *** [Makefile:640: all-recursive] Error 1
make[1]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make[1]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make[1]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make[1]: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make: *** [Makefile:504: all] Error 2
make: *** [Makefile:504: all] Error 2
make: *** [Makefile:504: all] Error 2
make: *** [Makefile:504: all] Error 2
make: *** [Makefile:504: all] Error 2
make: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
make: Leaving directory '/usr/src/RPM/BUILD/m17n-lib-1.8.0'
error: Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)










RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.21220 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
18.51user 7.84system 0:22.54elapsed 116%CPU (0avgtext+0avgdata 63604maxresident)k
18.51user 7.84system 0:22.54elapsed 116%CPU (0avgtext+0avgdata 63604maxresident)k
18.51user 7.84system 0:22.54elapsed 116%CPU (0avgtext+0avgdata 63604maxresident)k
18.51user 7.84system 0:22.54elapsed 116%CPU (0avgtext+0avgdata 63604maxresident)k
0inputs+0outputs (0major+1796960minor)pagefaults 0swaps
0inputs+0outputs (0major+1796960minor)pagefaults 0swaps
0inputs+0outputs (0major+1796960minor)pagefaults 0swaps
hsh-rebuild: rebuild of `libm17n-1.8.0-alt1.src.rpm' failed.
hsh-rebuild: rebuild of `libm17n-1.8.0-alt1.src.rpm' failed.
hsh-rebuild: rebuild of `libm17n-1.8.0-alt1.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
3.55user 2.45system 0:36.09elapsed 16%CPU (0avgtext+0avgdata 141320maxresident)k
3.55user 2.45system 0:36.09elapsed 16%CPU (0avgtext+0avgdata 141320maxresident)k
2832inputs+0outputs (0major+227022minor)pagefaults 0swaps
